k8s/prometheus/prometheus-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.k8s.local`)
      kind: Rule
      services:
        - name: prometheus-operated
          port: 9090
  tls:
    certResolver: default
